# audio-gen-exp

./: Cargo.toml  README.md
src/: error.rs  lib.rs  prelude.rs
src/audio/: mod.rs  node_host.rs
src/engine/: asset.rs  diffusion.rs  generic.rs  mod.rs
src/engine/conda/: conda_executor.py  environement.yml  mod.rs  test.py
test/: conda.py
