[package]
name = "crovai"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tempdir = "0.3.7"
thiserror = "1.0.63"
tokio = { version = "1.39", features = ["full"] }
derive_more = "0.99"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2" # Optional, for file logging
paste = "1.0.15"
tokio-util = {version = "0.7", features=["codec"]}
tokio-stream = "0.1"
hound = { version = "3.5" }
fundsp = { version = "0.18" }